--- a/gb/24/3/1/n14192775.md
+++ b/gb/24/3/1/n14192775.md
@@ -40,33 +40,32 @@
 <p>《华日》说，随着中国面临的经济挑战越来越多，刺激经济的选择越来越少，未来几年中国经济增长注定比现在还要疲软得多。</p>
 <p>责任编辑：林妍#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/29/n14192021.md#1">大陆律师：中国社会在倒退 中共体制恶果</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/1/n14192245.md#1">中国2月制造业PMI降至49.1 连五月萎缩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/10/n14633422.md#1">电力供应过剩?中国“负电价”走向常态化</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/10/n14633377.md#1">中国迈入老龄化社会 专家揭经济与社会隐忧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/27/n11481511.md#1" target="_blank">晓明：回顾历史，拒绝遗忘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/18/n3685199.md#1" target="_blank">难以置信的事实</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/14/n10637364.md#1" target="_blank">中共“文艺沙皇”被囚9年 晚年反思悲剧终局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/28/n11352168.md#1" target="_blank">前大陆公安：中共镇压法轮功早有预谋</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/5/n14630291.md#1">苦难、爱与希望：一位女设计师的传奇故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/29/n14625691.md#1">立冬“闭藏”如何顺应天时补肾养精气？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/4/n14629557.md#1">【未解之谜】转世没喝孟婆汤 台湾“鬼故事大师”揭三世奇缘</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/29/n14625375.md#1">僧人两度转世 只为了结尘缘</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/3/n14628878.md#1">纽约艺术学生联盟 百年老店只为求艺</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/10/n14633255.md#1">【直播】美卫生部长肯尼迪宣布促进女性健康计划</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/10/n14633246.md#1">【直播】政府停摆第41天 约翰逊议长举行记者会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/10/n14633423.md#1">【唐青看时事】习家军频出状况 川普讽木偶幕僚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/8/n14631839.md#1">【中国观察】福建舰最大短板被聚焦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/8/n14632093.md#1">全球淘金热潮下 越南家庭囤积黄金和金饰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/8/n14632074.md#1">荷兰首相：对安世CEO张学政的法院程序仍有效</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/7/n14631598.md#1">传王一博不再续约 经纪公司股价持续下跌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/8/n14632079.md#1">郝蕾讽威尼斯影后没含金量 辛芷蕾6连问反击</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/8/n14632111.md#1">王家卫翻车？《繁花》助理曝光录音 剧组回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/7/n14631655.md#1">蒋欣分享减肥秘辛 与经纪人互动笑泪交加</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/7/n14631632.md#1">《西游记》沙僧扮演者刘大刚病逝 终年78岁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/8/n14631779.md#1">为什么小狗会吃草？ 这种行为正常吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/21/n14620563.md#1">4款“煮汁”让鱼料理更鲜美</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/9/n14632325.md#1">香蕉要吃几分熟？ 营养师：成熟度会影响健康</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/7/n14631589.md#1">修复蛀牙的最好方法？每天嚼这种口香糖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/8/n14631843.md#1">研究：与AI朋友聊天 会让你更孤独</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652090.md#1">【十字路口】防疫或布疫？深夜无人机洒怪液</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652050.md#1">【直播】听证会：中共在拉丁美洲的组织犯罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/3/1/n14192775.htm">中国经济到底怎么了？分析指五大病因</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/3/1/n14192775.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
